# api/SPOTAPI/SPOTAPI/models/__init__.py
@@ -1,0 +1,13 @@
+# coding: utf-8
+
+# flake8: noqa
+from __future__ import absolute_import
+# import models into model package
+from SPOTAPI.models.diet import Diet
+from SPOTAPI.models.diet_user import DietUser
+from SPOTAPI.models.error import Error
+from SPOTAPI.models.ingredient_in_recepies import IngredientInRecepies
+from SPOTAPI.models.ingredient_user import IngredientUser
+from SPOTAPI.models.ingredients import Ingredients
+from SPOTAPI.models.recipes import Recipes
+from SPOTAPI.models.user import User
