# api/SPOTAPI/SPOTAPI/models/ingredient_user.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from SPOTAPI.models.base_model_ import Model
+from SPOTAPI.models.ingredients import Ingredients
+from SPOTAPI import util
+
+from SPOTAPI.models.ingredients import Ingredients  # noqa: E501
+
+class IngredientUser(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, allergie=None, ingredient=None):  # noqa: E501
+        """IngredientUser - a model defined in OpenAPI
+
+        :param allergie: The allergie of this IngredientUser.  # noqa: E501
+        :type allergie: bool
+        :param ingredient: The ingredient of this IngredientUser.  # noqa: E501
+        :type ingredient: Ingredients
+        """
+        self.openapi_types = {
+            'allergie': bool,
+            'ingredient': Ingredients
+        }
+
+        self.attribute_map = {
+            'allergie': 'allergie',
+            'ingredient': 'ingredient'
+        }
+
+        self._allergie = allergie
+        self._ingredient = ingredient
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'IngredientUser':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ingredientUser of this IngredientUser.  # noqa: E501
+        :rtype: IngredientUser
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def allergie(self):
+        """Gets the allergie of this IngredientUser.
+
+
+        :return: The allergie of this IngredientUser.
+        :rtype: bool
+        """
+        return self._allergie
+
+    @allergie.setter
+    def allergie(self, allergie):
+        """Sets the allergie of this IngredientUser.
+
+
+        :param allergie: The allergie of this IngredientUser.
+        :type allergie: bool
+        """
+        if allergie is None:
+            raise ValueError("Invalid value for `allergie`, must not be `None`")  # noqa: E501
+
+        self._allergie = allergie
+
+    @property
+    def ingredient(self):
+        """Gets the ingredient of this IngredientUser.
+
+
+        :return: The ingredient of this IngredientUser.
+        :rtype: Ingredients
+        """
+        return self._ingredient
+
+    @ingredient.setter
+    def ingredient(self, ingredient):
+        """Sets the ingredient of this IngredientUser.
+
+
+        :param ingredient: The ingredient of this IngredientUser.
+        :type ingredient: Ingredients
+        """
+
+        self._ingredient = ingredient
